--- a/compiler/src/iree/compiler/API/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/API/test/BUILD.bazel
@@ -21,3 +21,15 @@ iree_compiler_cc_test(
         "@llvm-project//mlir:CAPIIRHeaders",
     ],
 )
+
+iree_compiler_cc_test(
+    name = "codegen-flags-test",
+    testonly = True,
+    srcs = ["codegen_flags_test.cc"],
+    deps = [
+        "//compiler/bindings/c:headers",
+        "//compiler/src/iree/compiler/API:Impl",
+        "//compiler/src/iree/testing:gtest_main",
+        "@com_google_googletest//:gtest",
+    ],
+)
