Add test to check that transient allocations handling with and without use or {iree.abi.transients}.
Signed-off-by: MaheshRavishankar <mahesh.ravishankar@gmail.com>

--- a/tests/e2e/regression/BUILD.bazel
+++ b/tests/e2e/regression/BUILD.bazel
@@ -35,6 +35,7 @@ iree_lit_test_suite(
         "libm_linking.mlir",
         "scalar.mlir",
         "trace_dispatch_tensors.mlir",
+        "transients_test.mlir",
         "unused_args.mlir",
     ],
     cfg = "//tests:lit.cfg.py",
@@ -43,6 +44,7 @@ iree_lit_test_suite(
         "hostonly",
     ],
     tools = [
+        "//tools:iree-compile",
         "//tools:iree-opt",
         "//tools:iree-run-mlir",
         "@llvm-project//lld",
